<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C65E5E"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrol1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:title="@string/app_name" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tx1111"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/merc_main"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/mercMain"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/mercedes" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linner1111"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="horizontal"
                android:visibility="gone">

                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/purple_500"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp">


                            <TextView
                                android:id="@+id/merc1_txt"
                                android:layout_width="250dp"
                                android:layout_height="200dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/merc1"
                                android:textSize="60sp"
                                android:textStyle="bold" />


                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp">


                            <TextView
                                android:id="@+id/merc2_txt"
                                android:layout_width="250dp"
                                android:layout_height="200dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/merc2"
                                android:textSize="60sp"
                                android:textStyle="bold" />


                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:id="@+id/merc3_txt"
                                android:layout_width="250dp"
                                android:layout_height="200dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/merc3"
                                android:textSize="60sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tx2222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/bmw_main"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/bmwMain"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bmw" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linner2222"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="horizontal"
                android:visibility="gone">

                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/purple_500"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:id="@+id/bmw1_txt"
                                android:layout_width="250dp"
                                android:layout_height="200dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/bmw1"
                                android:textSize="60sp"
                                android:textStyle="bold" />


                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:id="@+id/bmw2_txt"
                                android:layout_width="250dp"
                                android:layout_height="200dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/bmw2"
                                android:textSize="60sp"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:id="@+id/bmw3_txt"
                                android:layout_width="250dp"
                                android:layout_height="200dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/bmw3"
                                android:textSize="60sp"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tx3333"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/audi_main"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/audiMain"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/audi" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linner3333"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="horizontal"
                android:visibility="gone">

                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/purple_500"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:id="@+id/audi1_txt"
                                android:layout_width="250dp"
                                android:layout_height="200dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/audi1"
                                android:textSize="60sp"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:id="@+id/audi2_txt"
                                android:layout_width="250dp"
                                android:layout_height="200dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/audi2"
                                android:textSize="60sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:id="@+id/audi3_txt"
                                android:layout_width="250dp"
                                android:layout_height="200dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/audi3"
                                android:textSize="60sp"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>